Added wifi connectivity, updated broker config

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
+board_build.partitions = partitions_custom.csv
 framework = espidf
 upload_speed = 921600
 monitor_speed = 115200
