Resolved mqtt reconnect issues, tuned filters.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,18 @@
 platform = espressif32
 board = featheresp32
 board_build.partitions = partitions_custom.csv
+build_flags =
+    -DCONFIG_SPIRAM_CACHE_WORKAROUND
 framework = espidf
 upload_speed = 921600
+monitor_speed = 115200
+monitor_flags = 
+    --raw
+
+[env:firebeetle32]
+platform = espressif32
+board = firebeetle32
+framework = espidf
 monitor_speed = 115200
 monitor_flags = 
     --raw
