Fix bugs in pf, create RTOS task for updating pf

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ monitor_flags =
 [env:firebeetle32]
 platform = espressif32
 board = firebeetle32
+board_build.partitions = partitions_custom.csv
 framework = espidf
 monitor_speed = 115200
 monitor_flags = 
