particle: don't use zero mean for position delta's in motion model

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ monitor_flags =
 platform = espressif32
 board = firebeetle32
 board_build.partitions = partitions_custom.csv
+build_flags =
+    -DCONFIG_SPIRAM_CACHE_WORKAROUND
 framework = espidf
 monitor_speed = 115200
 monitor_flags = 
